SERVER-50876 Initialize ReplSetMetadata::_isPrimary

Fix Coverity "Uninitialized scalar field" warning.